--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -17,7 +17,7 @@
   </main>
 
   <footer>
-    <p>&copy; {{ "now" | date("yyyy") }} Mi sitio</p>
+    <p>&copy; 2025 Mi sitio</p>
   </footer>
 </body>
 </html>
